--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -68,31 +68,26 @@
                 
             </form>
         </div>
-        <div class="checkout-form p-5">
+        <div class="checkout-form p-5 mb-4">
             <h4 class="mb-2">發票類型</h4>
             <form>
-                <ul class="nav nav-tabs">
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">個人雲端發票</a>
+                <ul class="nav nav-tabs mb-2">
+                    <li class="nav-item invoice-tab">
+                      <a class="nav-link text-gray-100 active" aria-current="page" href="#">個人雲端發票</a>
                     </li>
-                    <!-- <li class="nav-item">
-                      <a class="nav-link" href="#">個人雲端發票</a>
-                    </li> -->
                     <li class="nav-item">
-                      <a class="nav-link" href="#">公司發票</a>
+                      <a class="nav-link text-gray-100" href="#">公司發票</a>
                     </li>
                 </ul>
                 <div class="p-2">
-                    <label for="">載具</label>
-                    <input type="text" placeholder="/ xxxxxx">
+                    <label class="me-1" for="">載具</label>
+                    <input class="p-1" type="text" placeholder="/ xxxxxx">
                 </div>
             </form>
         </div>
-        <div>
-            <a href="#">取消</a>
-        </div>
-        <div>
-            <a href="#">確認</a>
+        <div class="text-end">
+            <a href="#" class="btn btn-outline-primary-600 px-5 me-2">取消</a>
+            <a href="#" class="btn btn-primary-600 px-5">確認</a>
         </div>
     </div>
 
