付費方案更新

--- a/pages/pay-plan.html
+++ b/pages/pay-plan.html
@@ -26,7 +26,7 @@
 
       <div class="row row-cols-lg-4 row-cols-md-2 row-cols-2 g-lg-3 g-2 pb-10">
         <div class="col mb-5">
-          <a class="card points-card p-2 mb-2" href="/pages/checkout.html">
+          <a class="card points-card p-2 mb-2" href="/pages/checkout/checkout.html">
             <h4>100點</h4>
           </a>
           <h6 class="text-gray-200 text-center">100 NTD</h6>
