--- a/pages/projectList-investor.html
+++ b/pages/projectList-investor.html
@@ -287,7 +287,7 @@
           <div class="card bg-gray-800 mt-8">
             <div class="d-flex justify-content-between project-title">              
                 <div>
-                  <a href="Investor-autobiography.html" class="text-white fs-3 fw-bold">謝阿金</a>
+                  <a href="investor-information.html" class="text-white fs-3 fw-bold">謝阿金</a>
                 </div>
                 <div class="d-flex align-items-center">
                   <a href="#">
@@ -356,7 +356,7 @@
           <div class="card bg-gray-800 mt-8">
             <div class="d-flex justify-content-between project-title">              
                 <div>
-                  <a href="Investor-autobiography.html" class="text-white fs-3 fw-bold">謝阿金</a>
+                  <a href="investor-information.html" class="text-white fs-3 fw-bold">謝阿金</a>
                 </div>
                 <div class="d-flex align-items-center">
                   <a href="#">
@@ -425,7 +425,7 @@
           <div class="card bg-gray-800 mt-8">
             <div class="d-flex justify-content-between project-title">              
                 <div>
-                  <a href="Investor-autobiography.html" class="text-white fs-3 fw-bold">謝阿金</a>
+                  <a href="investor-information.html" class="text-white fs-3 fw-bold">謝阿金</a>
                 </div>
                 <div class="d-flex align-items-center">
                   <a href="#">
@@ -494,7 +494,7 @@
           <div class="card bg-gray-800 mt-8">
             <div class="d-flex justify-content-between project-title">              
                 <div>
-                  <a href="Investor-autobiography.html" class="text-white fs-3 fw-bold">謝阿金</a>
+                  <a href="investor-information.html" class="text-white fs-3 fw-bold">謝阿金</a>
                 </div>
                 <div class="d-flex align-items-center">
                   <a href="#">
@@ -563,7 +563,7 @@
           <div class="card bg-gray-800 mt-8">
             <div class="d-flex justify-content-between project-title">              
                 <div>
-                  <a href="Investor-autobiography.html" class="text-white fs-3 fw-bold">謝阿金</a>
+                  <a href="investor-information.html" class="text-white fs-3 fw-bold">謝阿金</a>
                 </div>
                 <div class="d-flex align-items-center">
                   <a href="#">
