--- a/activity-casper.html
+++ b/activity-casper.html
@@ -4,48 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>卡斯柏創業分享會</title>
-  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-dcb83003.js"></script>
-  <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-e5845128.css">
+  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-62e75eae.js"></script>
+  <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-ed147dc8.css">
 </head>
 
 <body>
-    <nav class="header navbar navbar-expand-lg fixed-top">
-    <div class="container d-flex justify-content-center">
-        <!-- logo -->
-          <div class="d-flex justify-content-between align-items-center me-auto">
-            <a class="navbar-brand" href="index.html">
-                <img src="/Dream-Workshop/assets/創夢工坊-logo-fb8def81.png" alt="創夢工坊" style="width: 56px;">
-            </a>
-         </div>
-         <button class="navbar-toggler btn-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon d-flex align-items-center justify-content-center">
-            <i class="bi bi-list list-icon"></i>
-          </span>
-        </button>
-      
-      <!-- nav -->
-      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="project/ProjectList-project.html">找創業項目</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="investor/ProjectList-investor.html">找投資人</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">付費方案</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="discuss.html">討論區</a>
-          </li>
-        </ul>
-      </div>
-
-       <a href="login.html" class="btn login-btn btn-primary-600 d-none d-lg-block">
-        註冊/登入
-       </a>
+    
+<nav class="header navbar navbar-expand-lg fixed-top">
+<div class="container d-flex justify-content-center">
+    <div class="d-flex justify-content-between align-items-center me-auto">
+      <a class="navbar-brand" href="/pages/index.html">
+        <img
+          src="/Dream-Workshop/assets/創夢工坊-logo-fb8def81.png"
+          alt="創夢工坊"
+          style="width: 56px"
+        />
+      </a>
     </div>
-  </nav>
+    <button
+      class="navbar-toggler btn-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span
+        class="navbar-toggler-icon d-flex align-items-center justify-content-center"
+      >
+        <i class="bi bi-list list-icon"></i>
+      </span>
+    </button>
+
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="projectList-project.html"
+            >找創業項目</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="projectList-investor.html"
+            >找投資人</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="pay-plan.html">付費方案</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="discuss.html">討論區</a>
+        </li>
+      </ul>
+    </div>
+
+    <a
+      href="/pages/login/login.html"
+      class="btn login-btn btn-primary-600 d-none d-lg-block"
+    >
+      註冊/登入
+    </a>
+  </div>
+</nav>
+
+
     <main class="bg-green py-15">
          <!-- banner -->
         <section class="container py-8">
@@ -125,9 +147,26 @@
                 </div>
 
                 <div class="col-md-3 mx-md-auto text-center">
-                    <a href="#" class="btn py-lg-3 py-2 px-4 btn-primary-600 fw-bolder">報名</a>
+                    <button class="btn btn-lg btn-primary-600 fw-bolder" data-bs-toggle="modal" data-bs-target="#activity-modal">報名</button>
                   </div>
             </div>
+
+             <!-- modal 報名 -->
+ <div class="modal fade" id="activity-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content bg-gray-1000">
+            <div class="modal-header border-0">
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+            <div class="modal-body text-center text-primary-600 fs-3 fw-bold">
+               報名成功
+            </div>
+            <div class="border-0 text-center mt-15 mb-14">
+                <button type="button" class="btn btn-lg btn-primary-600 fw-bolder  px-9" data-bs-dismiss="modal">確認</button>
+            </div>
+          </div>
+    </div>
+  </div>
          </section>
 
     </main>
@@ -154,14 +193,14 @@
             <div class="col-lg-9 d-flex">
                 <ul class="footer-navbar me-5">
                     <li class="fs-5 fw-bold text-gray-400 mb-3"><a href="about-us.html">關於我們</a></li>
-                    <li><a class="fw-bold text-primary-600 mb-2" href="#">網站理念</a></li>
-                    <li><a class="fw-bold text-primary-600 mb-2" href="#">常見問題</a></li>
-                    <li><a class="fw-bold text-primary-600" href="#">隱私權政策</a></li>
+                    <li><a class="fw-bold text-primary-600 mb-2" href="about-us.html">網站理念</a></li>
+                    <li><a class="fw-bold text-primary-600 mb-2" href="about-us.html">常見問題</a></li>
+                    <li><a class="fw-bold text-primary-600" href="privacy-policy.html">隱私權政策</a></li>
                 </ul>
                 <ul class="footer-navbar me-5">
-                    <li class="fs-5 fw-bold text-gray-400 mb-3"><a href="#">付費方案</a></li>
-                    <li class="fw-bold text-primary-600 mb-2"><a href="#">購點方案</a></li>
-                    <li class="fw-bold text-primary-600"><a href="#">購點專區</a></li>
+                    <li class="fs-5 fw-bold text-gray-400 mb-3"><a href="pay-plan.html">付費方案</a></li>
+                    <li class="fw-bold text-primary-600 mb-2"><a href="pay-plan.html">購點方案</a></li>
+                    <li class="fw-bold text-primary-600"><a href="pay-plan.html">購點專區</a></li>
                 </ul>
                 <ul class="footer-navbar">
                     <li class="fs-5 fw-bold text-gray-400 mb-3">特色服務</li>
