--- a/pages/project-information.html
+++ b/pages/project-information.html
@@ -89,7 +89,7 @@
     <%- include('./layout/footer'); -%>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/project.js"></script>
+    <script src="../js/project.js" defer></script>
     <script type="module" src="/main.js"></script>
 
 
