--- a/project-information.html
+++ b/project-information.html
@@ -403,7 +403,7 @@
     </div>   
 </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/project.js"></script>
+    <script src="../js/project.js" defer></script>
     
 
 
