--- a/pages/checkout/info-confirm.html
+++ b/pages/checkout/info-confirm.html
@@ -88,8 +88,8 @@
         </div>
         
         <div class="text-end">
-            <a href="/pages/checkout/checkout.html" class="btn btn-outline-primary-600 px-5 me-2">回前頁</a>
-            <a href="/pages/checkout/order-finish.html" class="btn btn-primary-600 px-5">確認購買</a>
+            <a href="checkout.html" class="btn btn-outline-primary-600 px-5 me-2">回前頁</a>
+            <a href="order-finish.html" class="btn btn-primary-600 px-5">確認購買</a>
         </div>
     </div>
 
