--- a/pages/checkout/checkout.html
+++ b/pages/checkout/checkout.html
@@ -111,8 +111,9 @@
         </div>
         <div class="text-end">
             <a href="#" class="btn btn-outline-primary-600 px-5 me-2">取消</a>
-            <a href="/pages/checkout/info-confirm.html" class="btn btn-primary-600 px-5">確認</a>
+            <a href="info-confirm.html" class="btn btn-primary-600 px-5">確認</a>
         </div>
+        <a href="/pages/member-pages.html">12313</a>
     </div>
 
     <%- include('./layout/footer'); -%>
