--- a/pages/checkout/order-finish.html
+++ b/pages/checkout/order-finish.html
@@ -9,7 +9,8 @@
     <%- include('./layout/header'); -%>
 
     <div class="container" style="margin-top: 150px;">
-        <h2 class="mb-1">確認結帳資訊</h2>
+        <h1 class="text-center text-primary-600 mb-2">完成訂單 !</h1>
+        <h2 class="mb-1">結帳資訊</h2>
         <div class="checkout-form p-8 mb-8">
             <table class="table table-hover table-dark">
                 <thead>
@@ -39,22 +40,6 @@
             </table>
             <div class="d-flex justify-content-between align-items-center">
                 <h6>付款方式 : 中國信託</h6>
-                <!-- <div class="search-dropdown navbar-expand-lg me-lg-3">
-                    <div class="dropdown">
-                      <button class="btn dropdown-btn dropdown-toggle n-icon d-flex justify-content-between align-items-center"
-                        type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                        請選擇分期期數<span class="material-icons-outlined text-gray-100 p-0">
-                        </span>
-                      </button>
-                      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <li class="dropdown-hover"><button class="dropdown-item text-gray-100" type="button">3期</button></li>
-                        <li class="dropdown-hover"><button class="dropdown-item text-gray-100" type="button">6期</button></li>
-                        <li class="dropdown-hover"><button class="dropdown-item text-gray-100" type="button">9期</button></li>
-                        <li class="dropdown-hover"><button class="dropdown-item text-gray-100" type="button">12期</button></li>
-                      </ul>
-                    </div>
-                  </div>
-                </div> -->
             </div>
         </div>
         <h2 class="mb-1">聯絡人資訊</h2>
@@ -88,8 +73,8 @@
         </div>
         
         <div class="text-end">
-            <a href="/pages/project/ProjectList-project.html" class="btn btn-outline-primary-600 px-5 me-2">回創業項目</a>
-            <a href="/pages/investor/ProjectList-investor.html" class="btn btn-primary-600 px-5">回投資人清單</a>
+            <a href="pages/projectList-project.html" class="btn btn-outline-primary-600 px-5 me-2">回創業項目</a>
+            <a href="pages/projectList-investor.html" class="btn btn-primary-600 px-5">回投資人清單</a>
         </div>
     </div>
 
