--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,7 @@
   <title>創夢工坊</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@200..900&display=swap" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@200..900&display=swap" rel="stylesheet"> -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link
@@ -395,102 +395,102 @@
           <div class="col-lg-9">
             <div class="row row-cols-lg-4 row-cols-md-2 row-cols-2 g-lg-3 g-1">
               <div class="col">
-                <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-20.png);">
-                  <h5>不限產業</h5>
-                </a>
+                  <a class="card industry-card background-container background-container" href="#" style="background-image: url(/assets/images/Map-item-20.png);">
+                    <h5>不限產業</h5>
+                  </a>
               </div>
               <div class="col">
-                <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-1.png);">
+                <a class="card industry-card background-container" href="#" style="background-image: url(/assets/images/Map-item-1.png);">
                   <h5>批發/零售</h5>
                 </a>
               </div>
               <div class="col">
-                <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-2.png);">
+                <a class="card industry-card background-container" href="#" style="background-image: url(/assets/images/Map-item-2.png);">
                   <h5>生物科技</h5>
                 </a>
               </div>
               <div class="col">
-                <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-3.png);">
+                <a class="card industry-card background-container" href="#" style="background-image: url(/assets/images/Map-item-3.png);">
                   <h5>網際網路相關</h5>
                 </a>
               </div>
               <div class="col">
-                <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-4.png);">
+                <a class="card industry-card background-container" href="#" style="background-image: url(/assets/images/Map-item-4.png);">
                   <h5>文教相關</h5>
                 </a>
               </div>
               <div class="col">
-                <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-5.png);">
+                <a class="card industry-card background-container" href="#" style="background-image: url(/assets/images/Map-item-5.png);">
                   <h5>大眾傳播相關</h5>
                 </a>
               </div>
               <div class="col">
-                <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-6.png);">
+                <a class="card industry-card background-container" href="#" style="background-image: url(/assets/images/Map-item-6.png);">
                   <h5>旅遊/休閒/運動</h5>
                 </a>
               </div>
               <div class="col">
-                <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-7.png);">
+                <a class="card industry-card background-container" href="#" style="background-image: url(/assets/images/Map-item-7.png);">
                   <h5>一般服務</h5>
                 </a>
               </div>
               <div class="col">
-                <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-8.png);">
+                <a class="card industry-card background-container" href="#" style="background-image: url(/assets/images/Map-item-8.png);">
                   <h5>電子資訊/軟體/半導體相關</h5>
                 </a>
               </div>
               <div class="col">
-                <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-9.png);">
+                <a class="card industry-card background-container" href="#" style="background-image: url(/assets/images/Map-item-9.png);">
                   <h5>一般製造</h5>
                 </a>
               </div>
               <div class="col">
-                <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-10.png);">
+                <a class="card industry-card background-container" href="#" style="background-image: url(/assets/images/Map-item-10.png);">
                   <h5>物流/倉儲</h5>
                 </a>
               </div>
               <div class="col">
-                <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-11.png);">
+                <a class="card industry-card background-container" href="#" style="background-image: url(/assets/images/Map-item-11.png);">
                   <h5>政治宗教及社福相關</h5>
                 </a>
               </div>
               <div class="col">
-                <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-12.png);">
+                <a class="card industry-card background-container" href="#" style="background-image: url(/assets/images/Map-item-12.png);">
                   <h5>金融投顧/保險</h5>
                 </a>
               </div>
               <div class="col">
-                <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-13.png);">
+                <a class="card industry-card background-container" href="#" style="background-image: url(/assets/images/Map-item-13.png);">
                   <h5>法律/會計/顧問/研發</h5>
                 </a>
               </div>
               <div class="col">
-                <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-14.png);">
+                <a class="card industry-card background-container" href="#" style="background-image: url(/assets/images/Map-item-14.png);">
                   <h5>設計相關</h5>
                 </a>
               </div>
               <div class="col">
-                <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-15.png);">
+                <a class="card industry-card background-container" href="#" style="background-image: url(/assets/images/Map-item-15.png);">
                   <h5>建築營造/不動產相關</h5>
                 </a>
               </div>
               <div class="col">
-                <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-16.png);">
+                <a class="card industry-card background-container" href="#" style="background-image: url(/assets/images/Map-item-16.png);">
                   <h5>醫療保健/環境衛生</h5>
                 </a>
               </div>
               <div class="col">
-                <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-17.png);">
+                <a class="card industry-card background-container" href="#" style="background-image: url(/assets/images/Map-item-17.png);">
                   <h5>礦石及土石採取</h5>
                 </a>
               </div>
               <div class="col">
-                <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-18.png);">
+                <a class="card industry-card background-container" href="#" style="background-image: url(/assets/images/Map-item-18.png);">
                   <h5>住宿相關</h5>
                 </a>
               </div>
               <div class="col">
-                <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-19.png);">
+                <a class="card industry-card background-container" href="#" style="background-image: url(/assets/images/Map-item-19.png);">
                   <h5>餐飲</h5>
                 </a>
               </div>
@@ -534,7 +534,6 @@
     }
       });
     </script>
-      <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script> -->
 
       <script type="module" src="../main.js"></script>
 </body>
