--- a/checkout/info-confirm.html
+++ b/checkout/info-confirm.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>付費方案</title>
-    <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-62e75eae.js"></script>
-    <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-ed147dc8.css">
+    <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-e2c73107.js"></script>
+    <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-c3c2cf05.css">
   </head>
   <body>
     
@@ -53,6 +53,13 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="discuss.html">討論區</a>
+        </li>
+        <li class="nav-item text-end">
+          <a
+      href="/pages/login/login.html"
+      class="btn login-btn btn-primary-600 d-lg-none mt-8">
+      註冊/登入
+    </a>
         </li>
       </ul>
     </div>
@@ -147,8 +154,8 @@
         </div>
         
         <div class="text-end">
-            <a href="/pages/checkout/checkout.html" class="btn btn-outline-primary-600 px-5 me-2">回前頁</a>
-            <a href="/pages/checkout/order-finish.html" class="btn btn-primary-600 px-5">確認購買</a>
+            <a href="checkout.html" class="btn btn-outline-primary-600 px-5 me-2">回前頁</a>
+            <a href="order-finish.html" class="btn btn-primary-600 px-5">確認購買</a>
         </div>
     </div>
 
