--- a/checkout/order-finish.html
+++ b/checkout/order-finish.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>付費方案</title>
-    <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-62e75eae.js"></script>
-    <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-ed147dc8.css">
+    <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-e2c73107.js"></script>
+    <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-c3c2cf05.css">
   </head>
   <body>
     
@@ -54,6 +54,13 @@
         <li class="nav-item">
           <a class="nav-link" href="discuss.html">討論區</a>
         </li>
+        <li class="nav-item text-end">
+          <a
+      href="/pages/login/login.html"
+      class="btn login-btn btn-primary-600 d-lg-none mt-8">
+      註冊/登入
+    </a>
+        </li>
       </ul>
     </div>
 
@@ -68,7 +75,8 @@
 
 
     <div class="container" style="margin-top: 150px;">
-        <h2 class="mb-1">確認結帳資訊</h2>
+        <h1 class="text-center text-primary-600 mb-2">完成訂單 !</h1>
+        <h2 class="mb-1">結帳資訊</h2>
         <div class="checkout-form p-8 mb-8">
             <table class="table table-hover table-dark">
                 <thead>
@@ -98,22 +106,6 @@
             </table>
             <div class="d-flex justify-content-between align-items-center">
                 <h6>付款方式 : 中國信託</h6>
-                <!-- <div class="search-dropdown navbar-expand-lg me-lg-3">
-                    <div class="dropdown">
-                      <button class="btn dropdown-btn dropdown-toggle n-icon d-flex justify-content-between align-items-center"
-                        type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                        請選擇分期期數<span class="material-icons-outlined text-gray-100 p-0">
-                        </span>
-                      </button>
-                      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <li class="dropdown-hover"><button class="dropdown-item text-gray-100" type="button">3期</button></li>
-                        <li class="dropdown-hover"><button class="dropdown-item text-gray-100" type="button">6期</button></li>
-                        <li class="dropdown-hover"><button class="dropdown-item text-gray-100" type="button">9期</button></li>
-                        <li class="dropdown-hover"><button class="dropdown-item text-gray-100" type="button">12期</button></li>
-                      </ul>
-                    </div>
-                  </div>
-                </div> -->
             </div>
         </div>
         <h2 class="mb-1">聯絡人資訊</h2>
@@ -147,8 +139,8 @@
         </div>
         
         <div class="text-end">
-            <a href="/pages/project/ProjectList-project.html" class="btn btn-outline-primary-600 px-5 me-2">回創業項目</a>
-            <a href="/pages/investor/ProjectList-investor.html" class="btn btn-primary-600 px-5">回投資人清單</a>
+            <a href="pages/projectList-project.html" class="btn btn-outline-primary-600 px-5 me-2">回創業項目</a>
+            <a href="pages/projectList-investor.html" class="btn btn-primary-600 px-5">回投資人清單</a>
         </div>
     </div>
 
