--- a/login/fotget-password/fotget-password-step3.html
+++ b/login/fotget-password/fotget-password-step3.html
@@ -12,8 +12,8 @@
           display: block;
         }
       </style>
-  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-62e75eae.js"></script>
-  <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-ed147dc8.css">
+  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-e2c73107.js"></script>
+  <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-c3c2cf05.css">
 </head>
 <body>
     
@@ -61,6 +61,13 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="discuss.html">討論區</a>
+        </li>
+        <li class="nav-item text-end">
+          <a
+      href="/pages/login/login.html"
+      class="btn login-btn btn-primary-600 d-lg-none mt-8">
+      註冊/登入
+    </a>
         </li>
       </ul>
     </div>
