--- a/login/register-member/fill-info.html
+++ b/login/register-member/fill-info.html
@@ -6,8 +6,8 @@
     <title>註冊會員</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaTioPzWJ0h8cCw2WLLQpG2L1z4lg3FL2jvoLIweDvffp8EGFKzGpqp1E0i" crossorigin="anonymous">
-  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-62e75eae.js"></script>
-  <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-ed147dc8.css">
+  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-e2c73107.js"></script>
+  <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-c3c2cf05.css">
 </head>
 <body>
     
@@ -55,6 +55,13 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="discuss.html">討論區</a>
+        </li>
+        <li class="nav-item text-end">
+          <a
+      href="/pages/login/login.html"
+      class="btn login-btn btn-primary-600 d-lg-none mt-8">
+      註冊/登入
+    </a>
         </li>
       </ul>
     </div>
