--- a/member-pages.html
+++ b/member-pages.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>會員中心</title>
-  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-62e75eae.js"></script>
-  <script type="module" crossorigin src="/Dream-Workshop/assets/editor-e5fc7c61.js"></script>
-  <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-ed147dc8.css">
+  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-e2c73107.js"></script>
+  <script type="module" crossorigin src="/Dream-Workshop/assets/editor-170c5f47.js"></script>
+  <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-c3c2cf05.css">
 </head>
 
 <body>
@@ -55,6 +55,13 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="discuss.html">討論區</a>
+        </li>
+        <li class="nav-item text-end">
+          <a
+      href="/pages/login/login.html"
+      class="btn login-btn btn-primary-600 d-lg-none mt-8">
+      註冊/登入
+    </a>
         </li>
       </ul>
     </div>
@@ -1847,7 +1854,7 @@ document.getElementById('clearButton2')?.addEventListener('click', function() {
               <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
           <div class="modal-body text-center text-primary-600 fs-3 fw-bold">
-             是否刪除?
+             是否取消申請?
           </div>
           <div class="border-0 text-center mt-15 mb-14">
               <button type="button" class="btn btn-lg btn-gray-600 fw-bolder px-9" data-bs-dismiss="modal">取消</button>
