--- a/pay-plan.html
+++ b/pay-plan.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>付費方案</title>
-    <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-62e75eae.js"></script>
-    <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-ed147dc8.css">
+    <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-e2c73107.js"></script>
+    <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-c3c2cf05.css">
   </head>
   <body>
     
@@ -54,6 +54,13 @@
         <li class="nav-item">
           <a class="nav-link" href="discuss.html">討論區</a>
         </li>
+        <li class="nav-item text-end">
+          <a
+      href="/pages/login/login.html"
+      class="btn login-btn btn-primary-600 d-lg-none mt-8">
+      註冊/登入
+    </a>
+        </li>
       </ul>
     </div>
 
@@ -85,7 +92,7 @@
 
       <div class="row row-cols-lg-4 row-cols-md-2 row-cols-2 g-lg-3 g-2 pb-10">
         <div class="col mb-5">
-          <a class="card points-card p-2 mb-2" href="/pages/checkout/checkout.html">
+          <a class="card points-card p-2 mb-2" href="checkout/checkout.html">
             <h4>100點</h4>
           </a>
           <h6 class="text-gray-200 text-center">100 NTD</h6>
