--- a/post-article.html
+++ b/post-article.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>發表文章</title>
-  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-62e75eae.js"></script>
-  <script type="module" crossorigin src="/Dream-Workshop/assets/editor-e5fc7c61.js"></script>
-  <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-ed147dc8.css">
+  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-e2c73107.js"></script>
+  <script type="module" crossorigin src="/Dream-Workshop/assets/editor-170c5f47.js"></script>
+  <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-c3c2cf05.css">
 </head>
 
 <body>
@@ -55,6 +55,13 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="discuss.html">討論區</a>
+        </li>
+        <li class="nav-item text-end">
+          <a
+      href="/pages/login/login.html"
+      class="btn login-btn btn-primary-600 d-lg-none mt-8">
+      註冊/登入
+    </a>
         </li>
       </ul>
     </div>
