移動JS資料夾到assets

--- a/pages/checkout/checkout.html
+++ b/pages/checkout/checkout.html
@@ -113,7 +113,7 @@
             <a href="#" class="btn btn-outline-primary-600 px-5 me-2">取消</a>
             <a href="info-confirm.html" class="btn btn-primary-600 px-5">確認</a>
         </div>
-        <a href="/pages/member-pages.html">12313</a>
+        <a href="member-pages.html">12313</a>
     </div>
 
     <%- include('./layout/footer'); -%>
