--- a/pages/checkout/order-finish.html
+++ b/pages/checkout/order-finish.html
@@ -73,8 +73,8 @@
         </div>
         
         <div class="text-end">
-            <a href="pages/projectList-project.html" class="btn btn-outline-primary-600 px-5 me-2">回創業項目</a>
-            <a href="pages/projectList-investor.html" class="btn btn-primary-600 px-5">回投資人清單</a>
+            <a href="projectList-project.html" class="btn btn-outline-primary-600 px-5 me-2">回創業項目</a>
+            <a href="projectList-investor.html" class="btn btn-primary-600 px-5">回投資人清單</a>
         </div>
     </div>
 
