--- a/pages/editarticle.html
+++ b/pages/editarticle.html
@@ -84,7 +84,7 @@
           window.location.href = 'member-pages.html'; // 更改為你的頁面路徑
       });
   </script>
-    <script type="module" src="../js/editor.js"></script>
+    <script type="module" src="/assets/js/editor.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="../main.js"></script>
     
