--- a/pages/post-article.html
+++ b/pages/post-article.html
@@ -55,7 +55,7 @@
 
 
     <%- include('./layout/footer'); -%>
-    <script type="module" src="../js/editor.js"></script>
+    <script type="module" src="/assets/js/editor.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="../main.js"></script>
 </body>
