--- a/pages/login/register-member/create-account.html
+++ b/pages/login/register-member/create-account.html
@@ -12,9 +12,9 @@
     
     <div class="container">
         <div class="login bg-gray-1000">
-            <div class="position-relative mb-6">
+            <div class="position-relative mb-6" style="width: 90%; margin: 0 auto;">
                 <div class="progress" style="height: 1px;">
-                  <div class="progress-bar bg-primary-600" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar bg-primary-600" role="progressbar" style="width: 0%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
                 <button type="button" class="position-absolute top-0 start-0 translate-middle btn btn-sm btn-primary-600 rounded-pill" style="width: 3rem; height:3rem;">1</button>
                 <button type="button" class="position-absolute top-0 start-50 translate-middle btn btn-sm btn-gray-600 rounded-pill" style="width: 2rem; height:2rem;">2</button>
