--- a/pages/login/register-member/fill-info.html
+++ b/pages/login/register-member/fill-info.html
@@ -12,7 +12,7 @@
     
     <div class="container">
         <div class="login">
-            <div class="position-relative">
+            <div class="position-relative" style="width: 90%; margin: 0 auto;">
                 <div class="progress" style="height: 1px;">
                   <div class="progress-bar bg-primary-600" role="progressbar" style="width: 100%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
