更新文字粗細體

--- a/pages/activity-casper.html
+++ b/pages/activity-casper.html
@@ -88,7 +88,7 @@
                 </div>
 
                 <div class="col-md-3 mx-md-auto text-center">
-                    <button class="btn btn-lg btn-primary-600 fw-bolder" data-bs-toggle="modal" data-bs-target="#activity-modal">報名</button>
+                    <button class="btn btn-lg btn-primary-600 " data-bs-toggle="modal" data-bs-target="#activity-modal">報名</button>
                   </div>
             </div>
 
