--- a/pages/discuss.html
+++ b/pages/discuss.html
@@ -17,7 +17,7 @@
                 <h2 class="text-primary-600 fw-bold">文章列表</h2>
             </div>
             <div class="col-4 ">
-                    <a href="post-article.html" class="btn btn-primary-600 fw-bolder py-lg-3 py-2 px-lg-4">發表文章</a>
+                    <a href="post-article.html" class="btn btn-primary-600  py-lg-3 py-2 px-lg-4">發表文章</a>
                   </div>
            </div>
            
