--- a/pages/activity.html
+++ b/pages/activity.html
@@ -62,7 +62,7 @@
                 </div>
               </div>
               <div class="col-md-3 d-flex flex-column flex-lg-row justify-content-center">
-                <a href="activity-casper.html" class="btn btn-primary-600 fw-bolder py-lg-3 py-2 px-4">查看詳情</a>
+                <a href="activity-casper.html" class="btn btn-primary-600  py-lg-3 py-2 px-4">查看詳情</a>
               </div>
             </div>
           </div>
@@ -83,7 +83,7 @@
                 </div>
               </div>
               <div class="col-md-3 d-flex flex-column flex-lg-row justify-content-center">
-                <a href="activity.html" class="btn btn-primary-600 fw-bolder py-lg-3 py-2 px-4">查看詳情</a>
+                <a href="activity.html" class="btn btn-primary-600  py-lg-3 py-2 px-4">查看詳情</a>
               </div>
             </div>
           </div>
@@ -104,7 +104,7 @@
                 </div>
               </div>
               <div class="col-md-3 d-flex flex-column flex-lg-row justify-content-center">
-                <a href="activity.html" class="btn btn-primary-600 fw-bolder py-lg-3 py-2 px-4">查看詳情</a>
+                <a href="activity.html" class="btn btn-primary-600  py-lg-3 py-2 px-4">查看詳情</a>
               </div>
             </div>
           </div>
@@ -125,7 +125,7 @@
                 </div>
               </div>
               <div class="col-md-3 d-flex flex-column flex-lg-row justify-content-center">
-                <a href="activity.html" class="btn btn-primary-600 fw-bolder py-lg-3 py-2 px-4">查看詳情</a>
+                <a href="activity.html" class="btn btn-primary-600  py-lg-3 py-2 px-4">查看詳情</a>
               </div>
             </div>
           </div>
