--- a/pages/article-content.html
+++ b/pages/article-content.html
@@ -195,7 +195,7 @@
                 </label>
             </div>
             <div class="text-end">
-            <button class="btn btn-primary-600 fw-bolder py-lg-3 py-2 px-4">發表回應</button>
+            <button class="btn btn-primary-600  py-lg-3 py-2 px-4">發表回應</button>
              </div>
           </section>
 
