--- a/pages/post-article.html
+++ b/pages/post-article.html
@@ -15,7 +15,7 @@
         <section class="container">
           <h2 class="text-center py-8  fw-bolder text-primary-600">發表文章</h2>
               <div class="row">
-                <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg text-lg-end fw-bolder text-gray-400">標題</label>
+                <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg text-lg-end  text-gray-400">標題</label>
                 <div class="col-sm-10">
                   <input type="text" class="form-control form-control-lg bg-gray-800 bg-opacity-50 text-white" id="colFormLabelLg" >
                 </div>
@@ -24,7 +24,7 @@
 
     <section class="container my-8">
       <div class="row">
-          <label for="editor" class="col-sm-2 col-form-label col-form-label-lg text-lg-end fw-bolder text-gray-400">內容</label>
+          <label for="editor" class="col-sm-2 col-form-label col-form-label-lg text-lg-end  text-gray-400">內容</label>
           <div class="col-sm-10">
               <textarea type="text" id="editor" class="form-control"></textarea>
           </div>
@@ -42,7 +42,7 @@
     </div>
     <div class="d-flex justify-content-center mt-8">
     <div class="me-5">
-      <a href="post-article.html" class="btn btn-primary-600 fw-bolder py-lg-3 py-2 px-4">發表文章</a>
+      <a href="post-article.html" class="btn btn-primary-600 py-lg-3 py-2 px-4">發表文章</a>
     </div>
     <div>
       <a href="post-article.html" class="btn btn-gray-600 fw-bolder py-lg-3 py-2 px-4">取消</a>
