--- a/pages/login.html
+++ b/pages/login.html
@@ -21,14 +21,14 @@
                     <input id="password" type="text" class="login-input form-control me-lg-3 me-1 flex-grow-1" placeholder="請輸入密碼">
                 </div>
                 <div class="text-end">
-                    <a href="/pages/login/fotget-password/fotget-password-step1.html" class="text-gray-100 text-end mb-4">忘記密碼</a>
+                    <a href="fotget-password-step1.html" class="text-gray-100 text-end mb-4">忘記密碼</a>
                 </div>
                 
                 <div class="mb-4">
-                    <a href="/pages/index.html" class="btn btn-primary-600 w-100">登入</a>
+                    <a href="index.html" class="btn btn-primary-600 w-100">登入</a>
                 </div>
                 <div>
-                    <a href="/pages/login/register-member/create-account.html " class="step-link btn btn-outline-primary-600 w-100"
+                    <a href="create-account.html " class="step-link btn btn-outline-primary-600 w-100"
                     data-content="register-account">註冊會員</a>
                 </div>
             </form>    
