--- a/pages/pay-plan.html
+++ b/pages/pay-plan.html
@@ -7,10 +7,9 @@
   </head>
   <body>
     <%- include('./layout/header'); -%>
-
     <div
       class="pay-banner"
-      style="background-image: url(&quot;/assets/images/pay-banner.png&quot;)"
+      style="background-image: url(/assets/images/pay-banner.png)"
     ></div>
 
     <div class="container">
