--- a/pages/login/register-member/create-account.html
+++ b/pages/login/register-member/create-account.html
@@ -39,10 +39,10 @@
                     <input id="password" type="text" class="login-input form-control me-lg-3 me-1 flex-grow-1" placeholder="請再輸入一次密碼">
                 </div>
                 <div class="mb-5">
-                    <a href="/pages/login/register-member/email-verify.html" class="btn btn-primary-600 w-100 p-2">註冊會員</a>
+                    <a href="login/register-member/email-verify.html" class="btn btn-primary-600 w-100 p-2">註冊會員</a>
                 </div>
                 <div>
-                    <a href="/pages/login/login.html" class="btn btn-outline-primary-600 w-100 p-2">回前頁</a>
+                    <a href="login/login.html" class="btn btn-outline-primary-600 w-100 p-2">回前頁</a>
                 </div>
             </form> 
             
