--- a/pages/login/register-member/fill-info.html
+++ b/pages/login/register-member/fill-info.html
@@ -44,10 +44,10 @@
                 </div>
                 
                 <div class="mb-5">
-                    <a href="/pages/index.html" class="btn btn-primary-600 w-100 p-2">送出</a>
+                    <a href="index.html" class="btn btn-primary-600 w-100 p-2">送出</a>
                 </div>
                 <div>
-                    <a href="/pages/login/register-member/email-verify.html" class="btn btn-outline-primary-600 w-100 p-2">回前頁</a>
+                    <a href="login/register-member/email-verify.html" class="btn btn-outline-primary-600 w-100 p-2">回前頁</a>
                 </div>
             </form> 
         </div>    
