--- a/pages/login/fotget-password/fotget-password-step3.html
+++ b/pages/login/fotget-password/fotget-password-step3.html
@@ -33,7 +33,7 @@
                     class="login-input form-control" placeholder="請再輸入新密碼 ( 設定6-18位半形英文數字含大小寫)" required>
                 </div>
                 <div>
-                    <a href="/pages/index.html" class="btn btn-primary-600 w-100 p-2">送出</a>
+                    <a href="index.html" class="btn btn-primary-600 w-100 p-2">送出</a>
                 </div>
             </form>    
         </div>  
