--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
 
     <a
-      href="login/login.html"
+      href="login.html"
       class="btn login-btn btn-primary-600 d-none d-lg-block"
     >
       註冊/登入
