--- a/investor-information.html
+++ b/investor-information.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>謝阿金</title>
   <script type="module" crossorigin src="/Dream-Workshop/assets/_commonjsHelpers-725317a4.js"></script>
   <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-82050cca.js"></script>
   <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-804e097b.css">
@@ -66,7 +66,7 @@
     </div>
 
     <a
-      href="login/login.html"
+      href="login.html"
       class="btn login-btn btn-primary-600 d-none d-lg-block"
     >
       註冊/登入
