--- a/projectList-investor.html
+++ b/projectList-investor.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>投資人</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <script type="module" crossorigin src="/Dream-Workshop/assets/_commonjsHelpers-725317a4.js"></script>
   <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-82050cca.js"></script>
@@ -67,7 +67,7 @@
     </div>
 
     <a
-      href="login/login.html"
+      href="login.html"
       class="btn login-btn btn-primary-600 d-none d-lg-block"
     >
       註冊/登入
