--- a/pages/investor/ProjectList-investor.html
+++ b/pages/investor/ProjectList-investor.html
@@ -12,7 +12,7 @@
 
      <!-- 推薦投資人 -->
         <div class="container py-8 py-lg-15">
-          <h2 class="fw-bold text-center mb-5 text-primary-600">推薦投資人</h2>
+          <h2 class="fw-bold text-center mb-5 mt-8 text-primary-600">推薦投資人</h2>
           <!-- Swiper -->
           <div class="swiper businessSwiper">
             <div class="swiper-wrapper pe-12">
